<resources>
    <string name="app_name">My FaceBook</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="sign_up">Sign Up!</string>
    <string name="welcome">Welcome!</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_sign_in">Have An Account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_user">Select user</string>
    <string name="message">Message</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="time">time</string>
    <string name="poster_name">Name</string>
    <string name="friends">Friends</string>
    <string name="suggestions">suggestions</string>
    <string name="your_friends">Your friends</string>
    <string name="friend_request">Friend Request</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="add_friend">Add Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="inbox">Inbox</string>
    <string name="create_a_post">Create post</string>
    <string name="what_do_you_wanna_post">What do you wanna post?</string>
    <string name="add_pictures">Add pictures</string>
    <string name="settings">Settings</string>
    <string name="bio">Bio</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="enter_your_bio_here">Enter your bio here!</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="please_enter_a_bio_thats_less_than_150_words">Please enter a bio thats less than 150 words</string>
    <string name="done">Done</string>
    <string name="add_bio_here">Add bio here...</string>
    <string name="status">Status</string>
    <string name="no_bio">No bio</string>
    <string name="edit">Edit</string>
</resources>