<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/buttom_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/circleback"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/theirName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_name"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/c2.2"

        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/theirName" />

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buttom_shape2"
        android:padding="3dp"
        android:text="@string/add_friend"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>