<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/c1"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circleback"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/theirName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_name"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@id/image" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/time"
        android:textColor="@color/c2.2"
        android:layout_marginEnd="5dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/activeBuble"
        app:layout_constraintTop_toBottomOf="@+id/theirName"
        />

    <TextView
        android:id="@+id/lastText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/inbox"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintStart_toEndOf="@+id/image" />

    <TextView
        android:id="@+id/activeBuble"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/circlegreen"
        android:gravity="center"
        android:padding="3dp"
        android:layout_marginEnd="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>