<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/c2"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/posterPP"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circleback"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/posterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/posterPP"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/timePosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/c2.2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/posterPP"
        app:layout_constraintTop_toBottomOf="@+id/posterName" />

    <LinearLayout
        android:id="@+id/framePostCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/border4post"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterPP"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/txtPOSTED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/c2.2"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/circleback"
            android:scaleType="centerCrop"
            app:riv_oval="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showReacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="start"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framePostCont"
        app:layout_constraintWidth_percent="0.49">

        <TextView
            android:id="@+id/likesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/c2.2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/showComments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framePostCont"
        app:layout_constraintWidth_percent="0.49">

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/c2.2"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/likeBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/like"
        android:textColor="@color/c2.2"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/commentBtn"
        app:layout_constraintTop_toBottomOf="@id/showReacts"
        />

    <TextView
        android:id="@+id/commentBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/comment"
        android:textColor="@color/c2.2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/likeBtn"
        app:layout_constraintTop_toTopOf="@id/likeBtn"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>