<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activityContexs.activityContexs.CommentsLayout">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/posterPP"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:background="@drawable/circleback"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dots"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/menu_dots_vertical"
        android:padding="15dp"
        android:tint="@color/white"
        android:clickable="true"
        android:onClick="addPostNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/posterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/posterPP"

        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/menuPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@color/black"
        android:gravity="start"
        android:padding="5dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="2dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/editbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="2dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/timePosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/c2.2"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/posterPP"
        app:layout_constraintTop_toBottomOf="@+id/posterName" />

<LinearLayout
    android:id="@+id/llV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="vertical"
    android:padding="5dp"
    app:layout_constraintTop_toBottomOf="@+id/txtPOSTED">
    <ImageView
        android:id="@+id/picture"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_margin="2dp"
        android:background="@drawable/circleback"
        android:scaleType="centerCrop"
        app:riv_oval="true"/>

    <View
        android:id="@+id/line5h"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c2.2"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/showReacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="start"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_weight="0.45"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ooptto"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/heart"
                android:tint="@color/white"
                app:riv_oval="true" />
            <TextView
                android:id="@+id/likesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/c2.2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/showComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="10dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_weight="0.45">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/oopo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/commentd3"
                android:tint="@color/white"
                app:riv_oval="true" />
            <TextView
                android:id="@+id/commentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/c2.2"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
    <View
        android:id="@+id/line4h"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/c2.2"
        app:layout_constraintTop_toBottomOf="@id/llV"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtPOSTED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/c2.2"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/posterPP"
        app:layout_constraintStart_toEndOf="@+id/posterPP"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="5dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/line4h"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/typeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4h"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sendBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/circleback"
        android:src="@drawable/round_send_24"
        android:tint="@color/white"
        android:layout_margin="10dp"
        android:clickable="true"
        android:onClick="addComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:riv_oval="true" />
    <EditText
        android:id="@+id/typeBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/intextbos"
        android:hint="@string/comment"
        android:textColorHint="@color/c2.2"
        android:textColor="@color/white"
        tools:layout_editor_absoluteY="118dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toTopOf="@id/sendBtn"
        app:layout_constraintBottom_toBottomOf="@id/sendBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>